# funget

./: README.md  pyproject.toml  setup.py
.github/workflows/: sync.yml
example/: basic_usage.py  download.py
example/useless/tables/: core.py
src/funget/download/: core.py  multi.py  single.py
src/funget/upload/: core.py  single.py
src/nltget/: script.py
src/nltget/download/: common.py  single.py  work.py
tests/: __init__.py  test_config.py  test_downloader.py
