[project]
name = "funget"
version = "1.0.47"
description = "funget"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ "funfile>=1.0.15", "typer-slim>=0.15.2",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.scripts]
funget = "funget.script:funget"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funget"
Releases = "https://github.com/farfarfun/funget/releases"

[tool.setuptools]
license-files = []
