[project]
name = "nltget"
version = "1.1.58"
description = "nltget"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "funfile>=1.0.15", "nltlog>=1.0.1", "typer-slim>=0.15.2",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.scripts]
nltget = "nltget.script:nltget"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funget"
Releases = "https://github.com/farfarfun/funget/releases"

[tool.setuptools]
license-files = []
